cleanup for stripped tiles